--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,21 +1,76 @@
 <html>
   <head>
     <title>Contact Me</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <style>
+        body {
+            height: 100%;
+            width: 100%;
+        }
+
+        h3 {
+            font-size: 40px;
+        }
+
+        .heading {
+            margin-top: 30px;
+            margin-bottom: 100px;
+        }
+
+        textarea {
+          width: 90%;
+          height: 150px;
+        }
+
+        @media screen and (max-width: 576px) {
+            .info {
+                margin-left: 15px;
+            }
+        }        
+    </style>
   </head>
   <body>
-    <div>
-      <form action="/thanks" method="POST">
-        <label for="firstName">First Name:</label>
-        <input id="firstName" name="firstName" type="text">
-
-        <label for="lastName">Last Name:</label>
-        <input id="lastName" name="lastName" type="text">
-
-        <label for="email">Email:</label>
-        <input id="email" name="email" type="text">
-
-        <input type="submit" />
-      </form>
+    <div class='container'>
+      <div class="heading row text-center text-dark">
+        <h3 class="col">Austin Gray</h3>
+      </div>
+      <div class='row text-dark'>
+        <div class='col-sm-6'>
+          <h3>Email me!</h3>
+          <p>I would like to hear from you!</p>
+        </div>
+        <div class='info col-sm-6 container'>
+          <form action="/thanks" method="POST">
+            <div class="row">
+              <label for="firstName">First Name</label>
+            </div>
+            <div class='row mb-3'>
+              <input id="firstName" name="firstName" type="text">
+            </div>
+            <div class="row">
+              <label for="lastName">Last Name</label>
+            </div>
+            <div class='row mb-3'>
+              <input id="lastName" name="lastName" type="text">
+            </div>
+            <div class="row">
+              <label for="email">Email</label>
+            </div>
+            <div class='row mb-3'>
+              <input id="email" name="email" type="text">
+            </div>
+            <div class="row">
+              <label for="message">Message</label>
+            </div>
+            <div class="row mb-4">
+              <textarea id="message" name="message"></textarea>
+            </div>
+            <div class="row">
+              <input type="submit"/>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
