--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -1,10 +1,31 @@
 <html>
   <head>
-    <title>Thank You</title>
+    <title>Austin Gray</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <style>
+      body {
+          height: 100%;
+          width: 100%;
+      }
+
+      h3 {
+          font-size: 40px;
+      }
+
+      .heading {
+          margin-top: 30px;
+          margin-bottom: 80px;
+      }
+    </style>
   </head>
   <body>
-    <div>
-      Thank you <%= contact.firstName %> <%= contact.lastName %>.
+    <div class='container text-center text-dark'>
+      <div class="heading row">
+          <h3 class="col">Austin Gray</h3>
+      </div>
+      <div>
+        Thank you <%= contact.name %>! I will get back to you soon!
+      </div>
     </div>
   </body>
 </html>
