--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Austin Gray</title>
+    <title>Contact Me</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
@@ -36,30 +36,28 @@
       </div>
       <div class='row text-dark'>
         <div class='col-sm-6'>
-          <div class ='mr-3'>
-            <h3>Email me!</h3>
-            <p>I am open to any programming opportunities, send a message here and I will get back to you soon. If you have a question or would like to discuss an idea, let me know!</p>
-          </div>
+          <h3>Email me!</h3>
+          <p>I would like to hear from you!</p>
         </div>
         <div class='info col-sm-6 container'>
           <form action="/thanks" method="POST">
             <div class="row">
-              <label for="name">Name</label>
+              <label for="firstName">First Name</label>
             </div>
             <div class='row mb-3'>
-              <input id="name" name="name" type="text">
+              <input id="firstName" name="firstName" type="text">
+            </div>
+            <div class="row">
+              <label for="lastName">Last Name</label>
+            </div>
+            <div class='row mb-3'>
+              <input id="lastName" name="lastName" type="text">
             </div>
             <div class="row">
               <label for="email">Email</label>
             </div>
             <div class='row mb-3'>
               <input id="email" name="email" type="text">
-            </div>
-            <div class="row">
-              <label for="subject">Subject</label>
-            </div>
-            <div class='row mb-3'>
-              <input id="subject" name="subject" type="text">
             </div>
             <div class="row">
               <label for="message">Message</label>
