--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,8 @@
         }
 
         hr {
-            border-color: #999999;
-            width: 100px;
+            width: 150px;
+            color: #999999;
         }
 
         #photo {
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div class='container text-center text-dark'>
-        <div class="heading row">
+        <div class="heading row justify-content-center">
             <h3 class="col">Austin Gray</h3>
         </div>
         <div class="row m-3 justify-content-center">
@@ -53,14 +53,12 @@
             </div>
         </div>
         <div class="row m-3 justify-content-center">
-            <div id='about' class='col-12'>
+            <div class="col-12" id='about'>
                 <p>Thinker, coder, writer of syntactic sugar.</p>
-                <p></p>
             </div>
             <div>
                 <hr>
             </div>
-        </div>
         </div>
         <div class="row m-3 justify-content-center">
             <a class="btn" href='http://localhost:8080/portfolio'>View my work</a>
