--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,11 +1,20 @@
 <html>
   <head>
-    <title>Contact Me</title>
+    <title>Austin Gray</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
             height: 100%;
             width: 100%;
+        }
+
+        .btn {
+            display: inline-block;
+            border: 1px solid #262626;
+            color: #262626;
+            border-radius: 40px;
+            font-size: 15px;
+            width: 150px;
         }
 
         h3 {
@@ -37,21 +46,15 @@
       <div class='row text-dark'>
         <div class='col-sm-6'>
           <h3>Email me!</h3>
-          <p>I would like to hear from you!</p>
+          <p>I am open to any opportunities. If you have a question or would like to discuss an idea, let me know!</p>
         </div>
         <div class='info col-sm-6 container'>
           <form action="/thanks" method="POST">
             <div class="row">
-              <label for="firstName">First Name</label>
+              <label for="name">Name</label>
             </div>
             <div class='row mb-3'>
-              <input id="firstName" name="firstName" type="text">
-            </div>
-            <div class="row">
-              <label for="lastName">Last Name</label>
-            </div>
-            <div class='row mb-3'>
-              <input id="lastName" name="lastName" type="text">
+              <input id="name" name="name" type="text">
             </div>
             <div class="row">
               <label for="email">Email</label>
@@ -60,13 +63,19 @@
               <input id="email" name="email" type="text">
             </div>
             <div class="row">
+              <label for="subject">Subject</label>
+            </div>
+            <div class='row mb-3'>
+              <input id="subject" name="subject" type="text">
+            </div>
+            <div class="row">
               <label for="message">Message</label>
             </div>
             <div class="row mb-4">
               <textarea id="message" name="message"></textarea>
             </div>
             <div class="row">
-              <input type="submit"/>
+              <button class="btn" type="submit">Submit</button>
             </div>
           </form>
         </div>
