--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -1,10 +1,46 @@
 <html>
   <head>
     <title>Austin Gray</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <style>
+        body {
+            height: 100%;
+            width: 100%;
+        }
+
+        .btn {
+            display: inline-block;
+            border: 1px solid #262626;
+            color: #262626;
+            border-radius: 40px;
+            font-size: 15px;
+            width: 150px;
+        }
+
+        h3 {
+            font-size: 40px;
+        }
+
+        .heading {
+            margin-top: 30px;
+            margin-bottom: 80px;
+        }
+    </style>
   </head>
   <body>
-    <div>
-      Thank you <%= contact.name %>! I will get back to you soon! %>.
+    <div class='container'>
+      <div class="heading row text-center text-dark">
+        <h3 class="col">Austin Gray</h3>
+      </div>
+      <div class=" row text-center text-dark mb-5">
+        <p class="col">Thank you <%= contact.name %>! I will get back to you soon!</p>
+      </div>
+      <div class="row m-3 justify-content-center">
+          <a class="btn" href='http://localhost:8080/'>Home</a>
+      </div>
+      <div class="row m-3 justify-content-center">
+          <a class="btn" href='http://localhost:8080/portfolio'>Portfolio</a>
+      </div>
     </div>
   </body>
 </html>
