adds pictures of recent projects and respective links to portfolio page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,10 +61,10 @@
             </div>
         </div>
         <div class="row m-3 justify-content-center">
-            <a class="btn" href='http://localhost:8080/portfolio'>View my work</a>
+            <a class="btn" href='/portfolio'>View my work</a>
         </div>
         <div class="row m-3 justify-content-center">
-            <a class="btn" href='http://localhost:8080/contact'>Contact me</a>
+            <a class="btn" href='/contact'>Contact me</a>
         </div>
     </div>
   </body>
