--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -36,10 +36,10 @@
         <p class="col">Thank you <%= contact.name %>! I will get back to you soon!</p>
       </div>
       <div class="row m-3 justify-content-center">
-          <a class="btn" href='http://localhost:8080/'>Home</a>
+          <a class="btn" href='/'>Home</a>
       </div>
       <div class="row m-3 justify-content-center">
-          <a class="btn" href='http://localhost:8080/portfolio'>Portfolio</a>
+          <a class="btn" href='/portfolio'>Portfolio</a>
       </div>
     </div>
   </body>
