--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,8 +17,12 @@
             width: 150px;
         }
 
-        h3 {
+        .heading h3 {
             font-size: 40px;
+        }
+
+        input {
+          width: 100%
         }
 
         .heading {
@@ -26,14 +30,19 @@
             margin-bottom: 80px;
         }
 
+        p {
+          width: 85%;
+        }
+
         textarea {
-          width: 90%;
+          width: 100%;
           height: 150px;
         }
 
         @media screen and (max-width: 576px) {
             .info {
                 margin-left: 15px;
+                margin-right: 15px;
             }
         }        
     </style>
@@ -44,11 +53,12 @@
         <h3 class="col">Austin Gray</h3>
       </div>
       <div class='row text-dark'>
-        <div class='col-sm-6'>
+        <div class="col-2"></div>
+        <div class='col-sm-4'>
           <h3>Email me!</h3>
           <p>I am open to any opportunities. If you have a question or would like to discuss an idea, let me know!</p>
         </div>
-        <div class='info col-sm-6 container'>
+        <div class='info col-sm-4 container'>
           <form action="/thanks" method="POST">
             <div class="row">
               <label for="name">Name</label>
@@ -79,6 +89,7 @@
             </div>
           </form>
         </div>
+        <div class="col-2"></div>
       </div>
     </div>
   </body>
