--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -8,6 +8,15 @@
           width: 100%;
         }
 
+        .btn {
+          display: inline-block;
+          border: 1px solid #262626;
+          color: #262626;
+          border-radius: 40px;
+          font-size: 15px;
+          width: 150px;
+        }
+
         h3 {
           font-size: 40px;
         }
@@ -23,7 +32,7 @@
 
         .heading {
           margin-top: 30px;
-          margin-bottom: 80px;
+          margin-bottom: 25px;
         }
 
         @media screen and (max-width: 576px) {}        
@@ -33,6 +42,11 @@
     <div class='container'>
       <div class="heading row text-center text-dark">
         <h3 class="col">Austin Gray</h3>
+      </div>
+      <div class="row m-3 mb-5 justify-content-center">
+        <a class="btn col-2" href='/'>Home</a>
+        <div class="col-1"></div>
+        <a class="btn col-2" href='/contact'>Contact Me</a>
       </div>
       <div class="row justify-content-center text-dark mb-5">
         <h4 class="col-8">Recent Projects:</h4>
