--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -44,9 +44,8 @@
         <h3 class="col">Austin Gray</h3>
       </div>
       <div class="row m-3 mb-5 justify-content-center">
-        <a class="btn col-2" href='/'>Home</a>
-        <div class="col-1"></div>
-        <a class="btn col-2" href='/contact'>Contact Me</a>
+        <a class="btn mr-2" href='/'>Home</a>
+        <a class="btn ml-2" href='/contact'>Contact Me</a>
       </div>
       <div class="row justify-content-center text-dark mb-5">
         <h4 class="col-8">Recent Projects:</h4>
